<resources>
    <string name="app_name">MemoryCardsGame</string>
    <string name="time_left">Number of tries:</string>
    <string name="number">00</string>
    <string name="user_name">User Name</string>
    <string name="ready">Ready</string>
    <string name="set">set</string>
    <string name="go">go</string>
    <string name="number_of_lives">Number of lives</string>
    <string name="select_level">select level</string>
    <string name="leave_game_dialog_message">Are you sure you want to close the game?</string>
    <string name="positive_dialog_btn">Yes</string>
    <string name="negative_dialog_btn">No</string>
    <string name="enter_name">enter name</string>
    <string name="congrats_string">Congrats! you are a truly champion!</string>
    <string name="points">Winnigs</string>
    <string name="score">score:</string>
    <string name="score_multiplayer">Score:</string>
    <string name="its_a_tie">It\'s a Tie</string>
    <string name="tie">Tie</string>
    <string name="level_1_israel">Level 1 - Israel</string>
    <string name="level_2_england">Level 2 - England</string>
    <string name="level_3_spain">Level 3 - Spain</string>
    <string name="level_4_italy">Level 4 - Italy</string>
    <string name="level_5_germany">Level 5 - Germany</string>
    <string name="level_6_france">Level 6 - France</string>
    <string name="level_7_netherlands">Level 7 - Netherlands</string>
    <string name="level_8_greece">Level 8 - Greece</string>
    <string name="level_9_belgium">Level 9 - Belgium</string>
    <string name="level_10_agrentina">Level 10 - Argentina</string>
    <string name="level_11_international">Level 11 - International</string>
    <string name="hint">Hint</string>
    <string name="turn_off_hint">Turn hint of 3 seconds on/off</string>
    <string name="מוזיקה">Music</string>
    <string name="turn_off_music">Turn game music on/off</string>
    <string name="sounds">Sound FX</string>
    <string name="turn_off_sound">Turn game sound effects on/off</string>
    <string name="regular_mode_points">Regular mode points earned:</string>
    <string name="survival_mode_success">Survival mode Success:</string>
    <string name="game_settings">Game Settings</string>
    <string name="music_and_sounds">Music And Sounds</string>
    <string name="statistics">User Statistics</string>
    <string name="your_score_is">your score is:</string>
    <string name="your_score">Your score is:</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="please_enter_un">Please enter user name!</string>
    <string name="please_enter_first_user_name">Please enter first user name</string>
    <string name="please_enter_second_user_name">Please enter second user name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
