<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/game_settings"/>

    <SwitchPreference
        android:title="@string/hint"
        android:defaultValue="true"
        android:key="pref_key_game_hint"
        android:summary="@string/turn_off_hint"
        android:icon="@drawable/hintt_icon"/>

    <PreferenceCategory
        android:title="@string/music_and_sounds">

        <SwitchPreference
            android:title="@string/מוזיקה"
            android:key="pref_key_music"
            android:defaultValue="true"
            android:summary="@string/turn_off_music"
            android:icon="@drawable/noises"/>

        <SwitchPreference
            android:title="@string/sounds"
            android:key="pref_key_sound_fx"
            android:defaultValue="true"
            android:summary="@string/turn_off_sound"
            android:icon="@drawable/mute"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/statistics">

        <Preference
            android:title="@string/regular_mode_points"
            android:key="pref_rmr_stat"
            android:icon="@drawable/star_iconn"/>

        <Preference
            android:title="@string/survival_mode_success"
            android:key="pref_smr_stat"
            android:icon="@drawable/star_iconn"/>

    </PreferenceCategory>

</PreferenceScreen>